# FlightBench

./: README.md
benchmarks/benchmark_fast-planner/bspline/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/fast_bspline_opt/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/fast_bspline_opt/include/fast_bspline_opt/: bspline_optimizer.h
benchmarks/benchmark_fast-planner/fast_bspline_opt/src/: bspline_optimizer.cpp
benchmarks/benchmark_fast-planner/fast_path_searching/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/fast_path_searching/include/fast_path_searching/: astar.h  kinodynamic_astar.h  topo_prm.h
benchmarks/benchmark_fast-planner/fast_path_searching/src/: astar.cpp  kinodynamic_astar.cpp  topo_prm.cpp
benchmarks/benchmark_fast-planner/fast_plan_env/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/fast_plan_env/src/: edt_environment.cpp  obj_generator.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
benchmarks/benchmark_fast-planner/fast_traj_utils/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/fast_traj_utils/include/fast_traj_utils/: planning_visualization.h
benchmarks/benchmark_fast-planner/fast_traj_utils/src/: planning_visualization.cpp
benchmarks/benchmark_fast-planner/plan_manage/: CMakeLists.txt  package.xml
benchmarks/benchmark_fast-planner/plan_manage/launch/: fast.rviz  kino_algorithm.xml  kino_replan.launch
benchmarks/benchmark_fast-planner/plan_manage/src/: kino_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
benchmarks/benchmark_sb_min_time/: .gitignore  .gitmodules  README.md  drone.yaml  sst.yaml  start.sh
benchmarks/benchmark_sb_min_time/python/: map.py  map_pcd.py  pcd_getsurface.py
benchmarks/benchmark_sb_min_time/src/: motion_primitive.cpp  sst.cpp
benchmarks/benchmark_tgk-planner/decision/state_machine/: CMakeLists.txt  package.xml
benchmarks/benchmark_tgk-planner/mapping/occ_grid/: CMakeLists.txt
benchmarks/benchmark_tgk-planner/planning/kino_plan/: CMakeLists.txt
benchmarks/benchmark_tgk-planner/planning/poly_opt/: CMakeLists.txt
benchmarks/benchmark_tgk-planner/planning/poly_traj_utils/: CMakeLists.txt
benchmarks/benchmark_tgk-planner/self_msgs_and_srvs/: CMakeLists.txt
dep/mpc/: CMakeLists.txt
dep/mpc/include/rpg_mpc/: mpc_params.h
dep/mpc/parameters/: air.yaml
dep/mpc/src/: autopilot_mpc_instance.cpp
dep/quadrotor_common/quadrotor_msgs/: CMakeLists.txt  package.xml
dep/quadrotor_common/quadrotor_msgs/srv/: SetElectricFence.srv
dep/quadrotor_common/state_predictor/parameters/: default.yaml
dep/quadrotor_control/: note.md
dep/quadrotor_control/bridges/mavros_bridge/: CMakeLists.txt  package.xml
dep/quadrotor_control/bridges/mavros_bridge/include/mavros_bridge/: mavros_bridge.h  mavros_bridge.h.backup  thrust_mapping.h  thrust_mapping_params.h  vbat_thrust_calibration.h
dep/quadrotor_control/bridges/mavros_bridge/parameters/: default.yaml
dep/quadrotor_control/bridges/mavros_bridge/src/: mavros_bridge.cpp  mavros_bridge.cpp.backup  mavros_bridge_node.cpp  thrust_mapping.cpp  thrust_mapping_params.cpp  vbat_thrust_calibration.cpp
dep/quadrotor_control/control/autopilot/: package.xml
dep/quadrotor_control/quad_launch_files/launch/: real_quad_example.launch
dep/quadrotor_control/trajectory_planning/trajectory_ext/: CMakeLists.txt  package.xml
dep/quadrotor_control/trajectory_planning/trajectory_ext/src/: trajectory_ext.cpp
dep/quadrotor_control/utils/vbat_thrust_calibration/: CMakeLists.txt
dep/rotors_simulator/rotors_description/urdf/: air.xacro  air_1_base.xacro
docs/: README.md
flightbench/: package.xml
flightbench/script/: start_baseline.sh
flightlib/src/bridges/: unity_bridge.cpp
flightrl/onpolicy/runner/: student_trainer.py
flightrl/onpolicy/scripts/: collect_perception_aware_forest-high.sh  collect_perception_aware_forest-low.sh  collect_perception_aware_forest-mid.sh  collect_perception_aware_maze-low.sh  collect_perception_aware_maze-mid.sh  collect_perception_aware_racing-low.sh  dagger_train_pa_student_forest-low.sh  dagger_train_pa_student_forest-mid.sh  dagger_train_pa_student_maze-low.sh  dagger_train_pa_student_maze-mid.sh  dagger_train_pa_student_racing-low.sh  eval_min_time_forest-high.sh  eval_min_time_forest-low.sh  eval_min_time_forest-mid.sh  eval_min_time_maze-high.sh  eval_min_time_maze-low.sh  eval_min_time_maze-mid.sh  eval_min_time_racing-low.sh  eval_min_time_racing-mid.sh  eval_perception_aware_forest-high.sh  eval_perception_aware_forest-low.sh  eval_perception_aware_forest-mid.sh  eval_perception_aware_maze-high.sh  eval_perception_aware_maze-low.sh  eval_perception_aware_maze-mid.sh  eval_perception_aware_racing-low.sh  eval_perception_aware_racing-mid.sh  eval_perception_aware_vision_forest-low.sh  eval_perception_aware_vision_forest-mid.sh  eval_perception_aware_vision_racing-low.sh  test_train_pipeline.sh  train_min_time_forest-high.sh  train_min_time_forest-low.sh  train_min_time_forest-mid.sh  train_min_time_maze-high.sh  train_min_time_maze-low.sh  train_min_time_maze-mid.sh  train_min_time_racing-low.sh  train_min_time_racing-mid.sh  train_perception_aware_forest-high.sh  (+7 more)
(+56 files in other folders)
