<?xml version="1.0"?>
<package format="2">
  <name>mavros_bridge</name>
  <version>0.0.0</version>
  <description>The mavros_bridge package</description>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>message_generation</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <export>
    
  </export>
</package>
